--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           java-version: 21
           cache: maven
       - name: Package (skip tests)
-        run: ./mvnw -B -ntp -DskipTests package
+        run: mvn -B -ntp -f pom.xml -DskipTests package
       - name: Publish backend artifact
         uses: actions/upload-artifact@v4
         with:
