Swapp: Change npm run to pass with the same rules & Fix: ghcr to get Exactly string name the owner repository

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           context: .
           file: NeuroRec/NeuroRec/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/neurorec-backend:latest
+          tags: ghcr.io/${{ toLower(github.repository_owner) || 'borges07' }}/neurorec-backend:latest
 
   frontend-pages:
     runs-on: ubuntu-latest
