--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
           distribution: temurin
           java-version: 21
           cache: maven
-      - name: Package (skip tests)
-        run: mvn -B -ntp -f pom.xml -DskipTests package
+      - name: Test and package
+        run: mvn -B -ntp -f pom.xml test package
       - name: Publish backend artifact
         uses: actions/upload-artifact@v4
         with:
