--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,6 @@ concurrency:
 jobs:
   backend:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: NeuroRec/NeuroRec
     services:
       postgres:
         image: postgres:16
@@ -43,7 +40,7 @@ jobs:
           java-version: 21
           cache: maven
       - name: Test and package
-        run: mvn -B -ntp -f pom.xml test package
+        run: mvn -B -ntp -f NeuroRec/NeuroRec/pom.xml test package
       - name: Publish backend artifact
         uses: actions/upload-artifact@v4
         with:
